test/netlist/error/primitive-arity-2.bop
A(a, b) = (c, d)
where
  c, d = And(a, b);
end where;
